[package]
name = "lv_manager"
version = "0.1.0"
edition = "2021"
description = "Tool to help with lvm"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10"

[package.metadata.rpm]
package = "lv_manager"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
lv_manager = { path = "/usr/bin/lv_manager" }
